k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fraud-api-service
  namespace: fraud-detection
  labels:
    app: fraud-api
    app.kubernetes.io/name: fraud-api
    app.kubernetes.io/part-of: fraud-detection-platform
spec:
  type: ClusterIP
  selector:
    app: fraud-api
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
      name: http
